--- a/web/Frogger.html
+++ b/web/Frogger.html
@@ -1,10 +1,16 @@
 <html>
    <head>
-      <meta charset="utf-8"/>
           <title>Frogger</title>
    </head>
+   <style>
+        body {
+            background-color: cornflowerblue;
+        }
+   </style>
   <body>
-    <canvas id="area" width="600px" height="800px"></canvas>
-    <script type="application/dart" src="main.dart"></script>
+    <div align="center">
+        <canvas id="area" width="600px" height="800px"></canvas>
+        <script type="application/dart" src="main.dart"></script>
+    </div>
   </body>
 </html>
